--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,9 @@ baseurl: "/ieagle" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
+author:
+  name: PROMAG
+  email: service@oitsc.com
 
 # Build settings
 theme: minima
